[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "address-forge"
version = "0.1.0"
description = "ISO 20022 PostalAddress24 converter and validator powered by Claude"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "PostOakLabs", email = "dev@postoaklabs.io" }
]
keywords = ["iso20022", "address", "swift", "payments", "postaladdress24"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.25.0",
    "click>=8.1",
    "lxml>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
address-forge = "address_forge.cli:cli"

[project.urls]
Homepage = "https://github.com/PostOakLabs/address-forge"
Repository = "https://github.com/PostOakLabs/address-forge"
Issues = "https://github.com/PostOakLabs/address-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["address_forge"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=address_forge --cov-report=term-missing"

[tool.coverage.run]
source = ["address_forge"]
omit = ["tests/*"]
